--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="UtilityFile\MouseInput.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\AttackSkill.cpp" />
     <ClCompile Include="ObjectFile\PlayerFile\Cursor.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\SlowDownSkill.cpp" />
@@ -162,6 +163,8 @@
     <ClCompile Include="SceneFile\SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="UtilityFile\Define.h" />
+    <ClInclude Include="UtilityFile\MouseInput.h" />
     <ClInclude Include="SceneFile\AbstractScene.h" />
     <ClInclude Include="ObjectFile\SkillFile\AttackSkill.h" />
     <ClInclude Include="ObjectFile\PlayerFile\Cursor.h" />
