--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="ObjectFile\PlayerFile\Cursor.cpp">
       <Filter>ソース ファイル\MouseFile</Filter>
     </ClCompile>
+    <ClCompile Include="UtilityFile\MouseInput.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneFile\AbstractScene.h">
@@ -103,6 +106,12 @@
     </ClInclude>
     <ClInclude Include="ObjectFile\PlayerFile\Cursor.h">
       <Filter>ヘッダー ファイル\MouseFile</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityFile\MouseInput.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityFile\Define.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
