--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="UtilityFile\MouseInput.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectFile\ObjectBase.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneFile\AbstractScene.h">
