--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -43,11 +43,11 @@
     <Filter Include="ヘッダー ファイル\MouseFile">
       <UniqueIdentifier>{e05bb598-9900-4c25-8b84-20a7a755f729}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Coin">
-      <UniqueIdentifier>{35d68335-4da0-4e60-a292-71a3e5e75fb1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ヘッダー ファイル\Coin">
       <UniqueIdentifier>{105acc85-9c1b-4e23-81ce-114ee79fbc74}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Coin">
+      <UniqueIdentifier>{35d68335-4da0-4e60-a292-71a3e5e75fb1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -85,7 +85,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="ObjectFile\CoinFile\Coin.cpp">
-      <Filter>Coin</Filter>
+      <Filter>ソース ファイル\Coin</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="ObjectFile\CoinFile\Coin.h">
       <Filter>ヘッダー ファイル\Coin</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityFile\Geometry.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
