--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="ObjectFile\UIFile\UIBase.cpp">
       <Filter>ソースファイル\BaseFile</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectFile\UIFile\UICoin.cpp">
+      <Filter>ソースファイル\UIFile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -88,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="ObjectFile\UIFile\UIBase.h">
       <Filter>ヘッダーファイル\BaseFile</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectFile\UIFile\UICoins.h">
+      <Filter>ヘッダーファイル\UIFile</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +144,12 @@
     </Filter>
     <Filter Include="ソースファイル\BaseFile">
       <UniqueIdentifier>{62d4631e-b676-4025-b9a0-08c7f75a1531}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソースファイル\UIFile">
+      <UniqueIdentifier>{d933b2a7-0db1-41bf-a67a-745cce6a1b8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダーファイル\UIFile">
+      <UniqueIdentifier>{b7b86ddf-a460-493f-a853-b1e701b956a1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
