--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -28,9 +28,6 @@
     <ClCompile Include="ObjectFile\SkillFile\SlowDownSkill.cpp">
       <Filter>ソースファイル\SkillFile</Filter>
     </ClCompile>
-    <ClCompile Include="ObjectFile\EnemyFile\CrackEnemy.cpp">
-      <Filter>ソース ファイル\EnemyFile</Filter>
-    </ClCompile>
     <ClCompile Include="ObjectFile\ObjectBase.cpp">
       <Filter>ソースファイル\BaseFile</Filter>
     </ClCompile>
@@ -46,6 +43,8 @@
     <ClCompile Include="ObjectFile\UIFile\UICoin.cpp">
       <Filter>ソースファイル\UIFile</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectFile\EnemyFile\CrackEnemy.cpp" />
+    <ClCompile Include="ObjectFile\SkillFile\SkillBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -77,9 +76,6 @@
     <ClInclude Include="SceneFile\AbstractScene.h">
       <Filter>ヘッダーファイル\SceneFile</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectFile\EnemyFile\CrackEnemy.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="ObjectFile\SkillFile\AttackSkill.h">
       <Filter>ヘッダー ファイル\SkillFile</Filter>
     </ClInclude>
@@ -98,6 +94,8 @@
     <ClInclude Include="ObjectFile\UIFile\UICoins.h">
       <Filter>ヘッダーファイル\UIFile</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectFile\EnemyFile\CrackEnemy.h" />
+    <ClInclude Include="ObjectFile\SkillFile\SkillBase.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
