--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="SceneFile\GameMainScene.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SceneFile\SceneManager.cpp" />
+    <ClCompile Include="UtilityFile\ResourceManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ObjectFile\CoinFile\Coin.h" />
@@ -187,6 +188,7 @@
     <ClInclude Include="SceneFile\GameMainScene.h" />
     <ClInclude Include="ObjectFile\ObjectBase.h" />
     <ClInclude Include="SceneFile\SceneManager.h" />
+    <ClInclude Include="UtilityFile\ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Log.txt" />
