--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -45,6 +45,7 @@
     </ClCompile>
     <ClCompile Include="ObjectFile\EnemyFile\CrackEnemy.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\BSkillBase.cpp" />
+    <ClCompile Include="UtilityFile\ResourceManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -76,9 +77,6 @@
     <ClInclude Include="SceneFile\AbstractScene.h">
       <Filter>ヘッダーファイル\SceneFile</Filter>
     </ClInclude>
-    <ClInclude Include="ObjectFile\SkillFile\AttackSkill.h">
-      <Filter>ヘッダー ファイル\SkillFile</Filter>
-    </ClInclude>
     <ClInclude Include="ObjectFile\SkillFile\BSlowDownSkill.h">
       <Filter>ヘッダーファイル\SkillFile</Filter>
     </ClInclude>
@@ -96,6 +94,7 @@
     </ClInclude>
     <ClInclude Include="ObjectFile\EnemyFile\CrackEnemy.h" />
     <ClInclude Include="ObjectFile\SkillFile\BSkillBase.h" />
+    <ClInclude Include="UtilityFile\ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
