--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -48,6 +48,8 @@
     <ClCompile Include="ObjectFile\UIFile\UITimer.cpp">
       <Filter>ソースファイル\UIFile</Filter>
     </ClCompile>
+    <ClCompile Include="UtilityFile\ResourceManager.cpp" />
+    <ClCompile Include="ObjectFile\PauseButton\PauseButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -99,6 +101,8 @@
     <ClInclude Include="ObjectFile\UIFile\UITimer.h">
       <Filter>ヘッダーファイル\UIFile</Filter>
     </ClInclude>
+    <ClInclude Include="UtilityFile\ResourceManager.h" />
+    <ClInclude Include="ObjectFile\PauseButton\PauseButton.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
