--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="ObjectFile\UIFile\UIBase.cpp" />
     <ClCompile Include="ObjectFile\UIFile\UICoin.cpp" />
     <ClCompile Include="ObjectFile\UIFile\UITimer.cpp" />
+    <ClCompile Include="ObjectFile\EnemyFile\SnakeEnemy.cpp" />
     <ClCompile Include="UtilityFile\MouseInput.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\BAttackSkill.cpp" />
     <ClCompile Include="ObjectFile\PlayerFile\Cursor.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="ObjectFile\UIFile\UIBase.h" />
     <ClInclude Include="ObjectFile\UIFile\UICoins.h" />
     <ClInclude Include="ObjectFile\UIFile\UITimer.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\SnakeEnemy.h" />
     <ClInclude Include="UtilityFile\Define.h" />
     <ClInclude Include="UtilityFile\Geometry.h" />
     <ClInclude Include="UtilityFile\MouseInput.h" />
