--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="ObjectFile\SkillFile\SkillBase.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\AttackSkill.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\SlowDownSkill.cpp" />
+    <ClCompile Include="ObjectFile\EnemyFile\SnakeEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -111,6 +112,7 @@
     <ClInclude Include="ObjectFile\SkillFile\SkillBase.h" />
     <ClInclude Include="ObjectFile\SkillFile\AttackSKill.h" />
     <ClInclude Include="ObjectFile\SkillFile\SlowDownSkill.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\SnakeEnemy.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
