--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClCompile Include="ObjectFile\SkillFile\AttackSkill.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\SlowDownSkill.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\SnakeEnemy.cpp" />
+    <ClCompile Include="ObjectFile\EnemyFile\FrogEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -113,6 +114,7 @@
     <ClInclude Include="ObjectFile\SkillFile\AttackSKill.h" />
     <ClInclude Include="ObjectFile\SkillFile\SlowDownSkill.h" />
     <ClInclude Include="ObjectFile\EnemyFile\SnakeEnemy.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\FrogEnemy.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
