--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -56,6 +56,7 @@
     <ClCompile Include="ObjectFile\SkillFile\SlowDownSkill.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\SnakeEnemy.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\FrogEnemy.cpp" />
+    <ClCompile Include="ObjectFile\ClickEffectFile\ClickEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -115,6 +116,7 @@
     <ClInclude Include="ObjectFile\SkillFile\SlowDownSkill.h" />
     <ClInclude Include="ObjectFile\EnemyFile\SnakeEnemy.h" />
     <ClInclude Include="ObjectFile\EnemyFile\FrogEnemy.h" />
+    <ClInclude Include="ObjectFile\ClickEffectFile\ClickEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
