--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -57,6 +57,7 @@
     <ClCompile Include="ObjectFile\EnemyFile\SnakeEnemy.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\FrogEnemy.cpp" />
     <ClCompile Include="ObjectFile\ClickEffectFile\ClickEffect.cpp" />
+    <ClCompile Include="ObjectFile\ShapeZoneFile\HitCircleZone.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -117,6 +118,7 @@
     <ClInclude Include="ObjectFile\EnemyFile\SnakeEnemy.h" />
     <ClInclude Include="ObjectFile\EnemyFile\FrogEnemy.h" />
     <ClInclude Include="ObjectFile\ClickEffectFile\ClickEffect.h" />
+    <ClInclude Include="ObjectFile\ShapeZoneFile\HitCircleZone.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
