ダメージを与えると増える四角

--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -58,6 +58,7 @@
     <ClCompile Include="ObjectFile\EnemyFile\FrogEnemy.cpp" />
     <ClCompile Include="ObjectFile\ClickEffectFile\ClickEffect.cpp" />
     <ClCompile Include="ObjectFile\ShapeZoneFile\HitCircleZone.cpp" />
+    <ClCompile Include="ObjectFile\EnemyFile\MiniCrackEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -119,6 +120,7 @@
     <ClInclude Include="ObjectFile\EnemyFile\FrogEnemy.h" />
     <ClInclude Include="ObjectFile\ClickEffectFile\ClickEffect.h" />
     <ClInclude Include="ObjectFile\ShapeZoneFile\HitCircleZone.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\MiniCrackEnemy.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
