エネミー生成の配列作成

--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -58,8 +58,8 @@
     <ClCompile Include="ObjectFile\EnemyFile\FrogEnemy.cpp" />
     <ClCompile Include="ObjectFile\ClickEffectFile\ClickEffect.cpp" />
     <ClCompile Include="ObjectFile\ShapeZoneFile\HitCircleZone.cpp" />
-    <ClCompile Include="ObjectFile\EnemyFile\MiniCrackEnemy.cpp" />
     <ClCompile Include="ObjectFile\UIFile\UIGoal.cpp" />
+    <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -121,8 +121,9 @@
     <ClInclude Include="ObjectFile\EnemyFile\FrogEnemy.h" />
     <ClInclude Include="ObjectFile\ClickEffectFile\ClickEffect.h" />
     <ClInclude Include="ObjectFile\ShapeZoneFile\HitCircleZone.h" />
-    <ClInclude Include="ObjectFile\EnemyFile\MiniCrackEnemy.h" />
     <ClInclude Include="ObjectFile\UIFile\UIGoal.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\EnemyArray.h" />
+    <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
