--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -60,6 +60,7 @@
     <ClCompile Include="ObjectFile\ShapeZoneFile\HitCircleZone.cpp" />
     <ClCompile Include="ObjectFile\UIFile\UIGoal.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
+    <ClCompile Include="ObjectFile\DeathEffect\DeathEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -124,6 +125,7 @@
     <ClInclude Include="ObjectFile\UIFile\UIGoal.h" />
     <ClInclude Include="ObjectFile\EnemyFile\EnemyArray.h" />
     <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
+    <ClInclude Include="ObjectFile\DeathEffect\DeathEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
