--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -60,6 +60,8 @@
     <ClCompile Include="ObjectFile\ShapeZoneFile\HitCircleZone.cpp" />
     <ClCompile Include="ObjectFile\UIFile\UIGoal.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
+    <ClCompile Include="SceneFile\EndScene.cpp" />
+    <ClCompile Include="SceneFile\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -124,6 +126,8 @@
     <ClInclude Include="ObjectFile\UIFile\UIGoal.h" />
     <ClInclude Include="ObjectFile\EnemyFile\EnemyArray.h" />
     <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
+    <ClInclude Include="SceneFile\TitleScene.h" />
+    <ClInclude Include="SceneFile\EndScene.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
